fix(pk-portfolio): modified ~/components/_card, corrected spacing issues to make card content more uniform.

--- a/apps/pk-portfolio/src/scss/components/_card.scss
+++ b/apps/pk-portfolio/src/scss/components/_card.scss
@@ -27,11 +27,16 @@
   }
 
   & > div:last-of-type {
-    padding: 1.2rem;
+    height: 100%;
     line-height: 1.4rem;
 
-    h3 { margin: 0; }
-    p { margin-top: 0.4rem; }
+    h3, p {
+      margin: 0;
+      padding: 0 1.5rem;
+    }
+
+    h3 { margin: 1.2rem 0 0.4rem 0; }
+    p { padding-bottom: 1.2rem; }
   }
 
 }
